# todo-app

./: .env-sample  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 39c0a7d0cae6_create_phone_number_column_for_user_.py
app/: main.py
app/config/: settings.py
app/db/: database.py  models.py
app/routers/: admin.py  auth.py  todos.py  users.py
tests/: test_main.py  test_todos.py  utils.py
